# eis_mellon

./: .gitignore  .harper-dictionary.txt  FW.json  Makefile  README.md  fabfile.py  my-test.txt  pyproject.toml
.virtual_documents/notebooks/: 001-ayn-test-spacy-ner.ipynb
cli/: cli.py
docs/: mkdocs.yml
docs/docs/: index.md
eis/: __init__.py  dataset.py  features.py  hyperprint.py  plots.py  submit-dataset-jobs.py
eis/modeling/: predict.py  train.py
experiments/: fireworks-sandbox.py  test-docling.py  test-spacy-layout.py  textnet-experiment.py
notebooks/: 001-ayn-test-spacy-ner.ipynb  test.py  tutorial.ipynb
queuing/: slurm_qadapter.yaml  slurm_template.txt
reports/: 001-project-proposal.md  002-data-foundation-stream-technical-report.typ  EIS Public Archive Project Proposal.docx  my-library.bib  ~$S Public Archive Project Proposal.docx
scratch/: 001.doctags  001.json  001.txt  002.doctags  002.json  002.md  003.doctags  003.json  003.md  004.doctags  004.json  004.txt  005.doctags  005.json  005.txt  006.doctags  006.json  006.txt  007.doctags  007.json  007.md  008.doctags  008.json  008.md  009.doctags  009.json  009.md  010.doctags  010.json  010.md  011.doctags  011.json  011.txt  012.doctags  012.json  013.doctags  013.json  013.md  014.doctags  014.json  (+47 more)
scripts/: jobflow-test.py  my_tasks.py  run_woolworm.py  run_woolworm_job.py  slurm_job_template.yaml  submit_marker_jobs.py
tasks/: __init__.py  core.py
