[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "eis"
version = "0.0.1"
description = "A short description of the project."
authors = [{ name = "Aerith Netzer" }]

readme = "README.md"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
  "accelerate>=1.10.1",
  "boto3>=1.40.35",
  "docling>=2.54.0",
  "img2pdf>=0.6.1",
  "ipykernel>=6.30.1",
  "ipywidgets>=8.1.7",
  "jobflow[fireworks]>=0.2.0",
  "jobflow-remote>=0.1.8",
  "jupyterlab>=4.4.7",
  "jupyterlab-lsp>=5.2.0",
  "jupyterlab-vim>=4.1.4",
  "loguru",
  "mkdocs",
  "paddleocr[all]>=3.2.0",
  "pip",
  "pytesseract>=0.3.13",
  "python-dotenv",
  "python-lsp-server[all]>=1.13.1",
  "ruff",
  "spacy>=3.8.7",
  "spacy-layout>=0.0.12",
  "spacy-llm>=0.7.3",
  "textnets>=0.10.3",
  "tqdm",
  "typer",
  "woolworm>=0.0.8",
  "digitask>=0.0.3",
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["eis"]
include = ["pyproject.toml", "eis/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"] # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["eis"]
force-sort-within-sections = true
